fix layout shift(scroll)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,14 +93,6 @@
     --sidebar-ring: oklch(70.4% 0.04 256.788deg);
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
 @layer base {
     *,
     ::after,
@@ -293,108 +285,6 @@
     --upload-bg: #475569;
     --footer-shadow-color: #22d3ee;
 
-    /* .gradient-bg { */
-
-    /*    width: 100%; */
-
-    /*    height: 100%; */
-
-    /*    --color1: #a1000e; */
-
-    /*    background: radial-gradient( */
-
-    /*            circle farthest-side at 0% 50%, */
-
-    /*            var(--background) 23.5%, */
-
-    /*            rgba(255, 170, 0, 0) 0 */
-
-    /*    ) */
-
-    /*    21px 30px, */
-
-    /*    radial-gradient( */
-
-    /*            circle farthest-side at 0% 50%, */
-
-    /*            var(--color1) 24%, */
-
-    /*            rgba(240, 166, 17, 0) 0 */
-
-    /*    ) */
-
-    /*    19px 30px, */
-
-    /*    linear-gradient( */
-
-    /*            var(--background) 14%, */
-
-    /*            rgba(240, 166, 17, 0) 0, */
-
-    /*            rgba(240, 166, 17, 0) 85%, */
-
-    /*            var(--background) 0 */
-
-    /*    ) */
-
-    /*    0 0, */
-
-    /*    linear-gradient( */
-
-    /*            150deg, */
-
-    /*            var(--background) 24%, */
-
-    /*            var(--color1) 0, */
-
-    /*            var(--color1) 26%, */
-
-    /*            rgba(240, 166, 17, 0) 0, */
-
-    /*            rgba(240, 166, 17, 0) 74%, */
-
-    /*            var(--color1) 0, */
-
-    /*            var(--color1) 76%, */
-
-    /*            var(--background) 0 */
-
-    /*    ) */
-
-    /*    0 0, */
-
-    /*    linear-gradient( */
-
-    /*            30deg, */
-
-    /*            var(--background) 24%, */
-
-    /*            var(--color1) 0, */
-
-    /*            var(--color1) 26%, */
-
-    /*            rgba(240, 166, 17, 0) 0, */
-
-    /*            rgba(240, 166, 17, 0) 74%, */
-
-    /*            var(--color1) 0, */
-
-    /*            var(--color1) 76%, */
-
-    /*            var(--background) 0 */
-
-    /*    ) */
-
-    /*    0 0, */
-
-    /*    linear-gradient(90deg, var(--color1) 2%, var(--background) 0, var(--background) 98%, var(--color1) 0%) 0 0 */
-
-    /*    var(--background); */
-
-    /*    background-size: 40px 60px; */
-
-    /* } */
-
     .gradient-bg {
         width: 100%;
         height: 100%;
@@ -444,6 +334,9 @@
 }
 
 html {
+    scrollbar-gutter: stable;
+    scrollbar-width: thin;
+
     .react-international-phone-input-container {
         --react-international-phone-selected-dropdown-item-background-color: var(--color-muted);
         --react-international-phone-selected-dropdown-item-text-color: var(--foreground);
